client/splash/css/splash.css
/* Splash Page */
#splashLogo{
	height: 55px;
	display: inline-block;
	margin-left: 0px;
	position: absolute;
}
#inslideHeader{
	position:absolute;
	top:5vh;
	padding-right: 0px;
	margin-right: 0px;
	width: 100%;
	padding-left:30px;
}
#topSlide{
	/*background: url('images/BackgroundImage.jpg');*/
	background-color:#E0F2F8 !important;
	background-position: center top;
	background-size: 100% 100%;
	background-repeat: no-repeat;
	z-index:1;
	position:relative;
}
#loginLink{
	width: 100px;
    position: absolute;
    right: 5%;
    margin-right:0px;
}
header h1{
	color:black;
	font-size:72px;
	text-transform:none;
	font-weight:100;
}
#mainSlide{
	z-index:0;
	position:relative;
}
#mainSlideLogo{
	height: 100px;
	position: relative;
	top: 100px;
	z-index:0;
}
#mainSlidePhrase{
	font-size: 36px;
	position: relative;
	top: 60px;
	color: #2FC1D2;
	z-index:0;
}
#textContainer{
	position:relative;
	z-index:1;
	top:50px;
}
#splashThoughtBox{
	width: 500px;
	margin-left: calc(50% - 250px) !important;
	margin-top: 20px !important;
}
#submitNewThoughtHome{
	position: absolute;
	right: calc(50% - 260px);
	bottom: -20px;
	text-decoration: none;
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none;
	background-color: #32c0d2;
}
#submitThoughtPopup{
	position: absolute;
	width: 70%;
	background: white;
	height: 220px;
	top: 80px;
	z-index: 2;
	color: black;
	left: 15%;
	font: 300 100%/1.5em 'Lato', sans-serif;
	display:none;
}
#closeSignupPopup{
	position: absolute;
	font-size: 3em;
	color: gray;
	cursor: pointer;
    top: 7px;	
}
#signupText{
	top: 20%;
    position: relative;
    font-size: 2em;
    line-height: 1.2em;
}
.navbar-nav{
	width:35%;
	/*height:5.3em;*/
}
.nav>li{
	margin-right:10%;
}
.fixedHeadLi{
	/*margin-right:2% !important;*/
	margin-right:0px !important;
}
.nav>li>a{
	padding-top: 17px;
	/*padding-left: 0px;*/
	padding-right:0px;
	color:black;
	font-family: 'GothamHTF-Book', sans-serif;
	font-size:14px !important;
	transition: color 0.5s ease;
	color:black;
	cursor:pointer;
}
.nav>li>a:hover{
	transition: color 0.5s ease;
	color:black;
	background:transparent;
}
nav.navbar.fixed-to-top{
	z-index:10;
	height:5.3em;
}
.navbar-default .navbar-nav>li>a{
	margin-right:30px;
	color:white;
}
.navbar-default{
	background-color: #4cc4e0
}
.landingSection{
	overflow: hidden;
	padding: 50px 0px 75px 0px;
	min-height: 600px;
	color: white;
	width:100%;
}
#teamSlide{
	padding-top:20px;
	padding-bottom:75px;
}
.landingSection h1{
	/*text-transform: uppercase;*/
	font-weight: 300;
	/*font-family: 'Roboto', sans-serif;*/
	font-family: "Gotham-Book";
	font-size: 2.8em;
	color:white;
}
.landingSection p{
	font-family: "Gotham-Book";
}
#buttonContainer{
	float: left;
	position: relative;
	left: 15%;
	margin-top:7%;
}
#secondSlide{
	background-color: #FABF80;
}
#secondSlideContainer{
	padding-left: 4%;
	width: 100%;
}
#thirdSlide{
	background-color: #FFFFFF;
}
#thirdSlideContainer{
	padding-left: 4%;
	width: 100%;
	height: 500px;
}
#cultivateSlide{
	background-color:#F8A346;
}
#uniqueSlideText{
	margin-top:20px;
}
.landingSlideIcon{
	height:65px;
}
.landingButton{
	cursor:pointer;
}
#facebookSignButton{
	height:28px;
	margin-top:3%;
	margin-bottom:5%;
	background-image: url("images/signupwithfbbutton.png");
}
#facebookLoginButton{
	height:28px;
	margin-top:3%;
	margin-bottom:5%;
	background-image: url("images/loginwithfbbutton.png");
}
#goSignupButton{
	margin-top:1%;
}

#goButton {
	text-decoration: none;
	height: 35px;
}
.signupButtons{
	cursor:pointer;
	height: 25px;
	margin-top: 11%;
	margin-bottom:11%;
}
#signupButton{
	
}
#homeSignupButton{

}
#navSignupEmail{
	margin-top: 10%;
	font-size: 2rem;
}
#navSignupEmail-error {
	font-size: 2rem;
}

.facebook-button{
	background-repeat: no-repeat;
	background-position: 100%;
	background-color: #f9f9f9;
	background-size: 192px auto;
	height: 27px;
	width: 192px;
	border: none;
}

.signup-button {
	background-image: url("images/signupherebutton.png");
	background-repeat: no-repeat;
	background-position: 100%;
	background-color: #f9f9f9;
	background-size: 140px auto;
	height: 26px;
	width: 140px;
	border: none;
}

.signup-button-2 {
	background-image: url("images/signupbutton.png");
	background-repeat: no-repeat;
	background-position: 100%;
	background-color: transparent;
	background-size: 81px auto;
	height: 25px;
	width: 81px;
	border: none;
}

.cultivateIcon{
	height: 49px;
	float: left;
	margin-top: 10px;
}
#keepIcon{
	height:40px;
}
.cultivateElement{
	display:inline-block;
	width:365px;
	/*fsloat:left;*/
}
.cultivateElement .title{
	font-size: 1.6em;
	text-align: left;
	margin-bottom: 0px;
}
.cultivateText{
	color: black;
	font-size: 1em;
	text-align: left;
	width:260px;
}
.cultivateTextContainer{
	padding-left:0px;
}
#secondSlide h1{
	margin-bottom:5%;
}
.cultivateRow{
	margin-bottom:4%;
}
#shareIcon{
	position:relative;
	left:10px;
}
#contactUs{
	background-color: #EF6A4F;
	height: 20%;
	min-height: 20%;
	padding-top: 7%;
}
#contact{
	font-size:1.4em;
	margin-bottom:2%;
}
#contactEmail{
	font-size: 1em;
}

/*arrow*/
.arrow-wrap {
	position:absolute;
	z-index:1;
	left:50%;
	top:-5em;
	margin-left:-5em;
	background:#111;
	width:10em;
	height:10em;
	padding:4em 2em;
	border-radius:50%;
	font-size:0.5em;
	display:block;
	box-shadow:0px 0px 5px 0px #333;
}

.arrow {
	float:left;
	position:relative;
	width: 0px;
	height: 0px;
	border-style: solid;
	border-width: 3em 3em 0 3em;
	border-color: #ffffff transparent transparent transparent;
	  -webkit-transform:rotate(360deg)
}
.icon-downbutton{
	bottom: 1%;
	position: absolute;
	left: 48%;
	left: -webkit-calc(50% - 50px);
	left: -moz-calc(50% - 50px);
	font-size: 2.8em;
	color: black;
	cursor: pointer;
	width: 100px;
	padding-left: 30px;
	text-align: center;
	padding-right: 30px;
	padding-bottom: 10px;
}
.scrollDown{
	color: black;
	font-size: 1.3em;
	bottom: 1%;
	position: absolute;
	left: -webkit-calc(50% - 50px);
	left: -moz-calc(50% - 50px);
	height: 55px;
	margin-bottom: 0px;
	width: 100px;
	padding-top: 10px;
	cursor: pointer;
}
.splashThoughts {
	width: inherit;
	height: inherit;
	position: relative;
	/*height: 550px;*/
	top: -225px;
	z-index: 0;
}

